--- a/SpringBoot/src/main/resources/application.properties
+++ b/SpringBoot/src/main/resources/application.properties
@@ -2,10 +2,31 @@ spring.application.name=SpringBoot
 
 #애플리케이션 포트 설정
 
+#devtools
+
 #Mysql 연결설정
+#데이터베이스 만들기
+#workbench
+#create database springdb;
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/springdb
+spring.datasource.username=root
+spring.datasource.password=1234
+
+#데이터베이스 SQL구문 설정(SQL 방언)
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 #화면 sql구문 보이게
+spring.jpa.properties.hibernate.show_sql=true
+#가독성이 좋게 포맷팅
+spring.jpa.properties.hibernate.format_sql=true
 
-#데이터베이스 초기화
+#데이터베이스 초기화 - DDL AUTO 옵션
+#none : 사용하지 않음, create : 테이블 삭제 후 테이블 생성,
+# create-drop : 테이블 삭제 후 테이블 생성 종료 삭제, 
+#update : 생성 수정 , validate : 엔터티와 테이블 매핑
+spring.jpa.hibernate.ddl-auto=update
+ 
 
-#파일업로드 셋팅
+
+# 파일업로드 
