--- a/SpringBoot/src/main/resources/application.properties
+++ b/SpringBoot/src/main/resources/application.properties
@@ -30,3 +30,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 
 # 파일업로드 
+
+# 홈화면
+spring.mvc.view.prefix=/templates/member/
+spring.mvc.view.suffix=.html
